<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Val</string>

    <!-- Login activity strings -->

    <string name="app_name">MDroid</string>
    <string name="MDroidLogo">MDroid Logo</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">login</string>
    <string name="userOfflinebutton">I\'m offline</string>
    <string name="RememberPassword">Remember password and login automatically</string>

    <!-- Data warning popup strings -->

    <string name="dataWarningHeading">Set Moodle Server URL</string>
    <string name="dataWarningData">
Thanks for using MDroid. The first thing you want to do is to set the moodle server URL. Click the settings button on action bar or in the menu.
   	</string>
    <string name="dontShowAgian">Don\'t show again</string>
    <string name="dataWarningButtonText">got it!</string>

    <!-- About MDroid dialog Strings -->

    <string name="aboutmdroidText">
MDroid is a native application for Android built to make access to Moodle sites on mobile awesome. This app is tested but should you find bugs/need help drop in a mail to support@exzalt.co.in with following info :
-> Name and email
-> Moodle server (preferably with account to test)
-> Problem description
 </string>
    <string name="MDroidTestedServersHeading">Tested servers</string>
    <string name="MDroidTestedServers">
moodle.iitb.ac.in
www.cse.iitm.ac.in/moodle</string>
    <string name="MDroidContentSourcesHeading">Content sources</string>
    <string name="MDroidContentSources">
MDroid presently fetches contents from the following sections of Moodle:
Files: from resources and forums
Forums: from forums and discussions</string>
    <string name="MDroidBugsHeading">Bugs and Issues</string>
    <string name="MDroidBugs">File extension issues while storing files offline</string>

    <!-- Rating dialog strings -->
    <string name="rateRequestText">A good rating is all I hope for the time I spent in development and continious support.</string>

    <!-- MDroid Help dialog strings -->

    <string name="mdroidhelpTopicsList">Help topics</string>
    <string name="mdroidhelpTopics">Login
        \nCourse listing
        \nFile listing
        \nForums
        \nDiscussions
        \nOffline course listing
        \nOffline file listing
        \nSaving credentials
        \nChanging server
        \nFile opening errors</string>
    <string name="mdroidhelpLoginHeading">Login</string>
    <string name="mdroidhelpLogin">Username - username or LDAP Id for login
        \nPassword - password for login
        \nRemember password - Remembers username and password and takes autologin the next time you open the application.
        \nNOTE: Username is always saved on login irrespective of the above preference.</string>
    <string name="mdroidhelpCourseHeading">Course Listing</string>
    <string name="mdroidhelpCourse">Lists all your courses available under your account on Moodle server</string>
    <string name="mdroidhelpFilesHeading">Files Listing</string>
    <string name="mdroidhelpFiles">Files : Lists files of a selected course
        \nfrom Resources - files of a selected course in the resources section
        \nfrom Forums - files of a selected course uploaded on forums as attachements
        \nDownload - Indicates that the file is not available offline. Click download to make it available offline
        \nOpen - Indicates that file is available and can be opened
        \nDownloading - The file is being downloaded. You can run a maximum of two parllel downloads
        \nAdditional details like the file size and datetime of download are shown for the offline files</string>

    <!-- filelisting activity strings -->

    <string name="filesFromResoursesHeading">Files from resourses</string>
    <string name="filesFromForumsHeading">Files from forums</string>

    <!-- filelistviewlayout.xml strings -->

    <string name="linearLayoutLoadingText">Loading</string>
    <string name="see_more">More</string>

</resources>