<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="3dp" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/mdroid" />

        <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutmdroidText"
            android:textColor="#000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/MDroidTestedServersHeading"
            android:textColor="@color/appBlue"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MDroidTestedServers"
            android:textColor="#000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/MDroidContentSourcesHeading"
            android:textColor="@color/appBlue"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MDroidContentSources"
            android:textColor="#000000" />



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/MDroidBugsHeading"
            android:textColor="@color/appBlue"
            android:textSize="18dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MDroidBugs"
            android:textColor="#000000" />
    </LinearLayout>

</ScrollView>