<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewMain"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backrepeat"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <ImageView
            android:id="@+id/MDroidLogoimageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/MDroidLogo"
            android:src="@drawable/mdroid" />
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp" >
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:hint="@string/userName"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/overWhite" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="8dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="8dp"
            android:textColor="@color/overWhite" />
		</LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/greenbutton"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/loginButton"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/userOfflineButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bluebutton"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/userOfflinebutton"
            android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
